force-app/main/default/objects/Route_to_Market__c/Route_to_Market__c.object-meta.xml
<CustomObject>
    <label>Route to Market</label>
    <nameField>
        <displayFormat>RTM-{000000}</displayFormat>
        <label>Route to Market Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route to Markets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>