force-app/main/default/objects/Route_to_Market__c/fields/Account_Development_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Development_Plan__c</fullName>
    <label>Account Development Plan</label>
    <referenceTo>Account_Development_Plan__c</referenceTo>
    <relationshipLabel>Route to Markets</relationshipLabel>
    <relationshipName>Route_to_Markets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>