force-app/main/default/objects/Route_to_Market__c/fields/Arts_Entertainment_Recreation__c.field-meta.xml
<CustomField>
    <fullName>Arts_Entertainment_Recreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arts, Entertainment &amp; Recreation</label>
    <type>Checkbox</type>
</CustomField>