force-app/main/default/objects/Route_to_Market__c/fields/Berks_Bucks__c.field-meta.xml
<CustomField>
    <fullName>Berks_Bucks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Berks &amp; Bucks</label>
    <type>Checkbox</type>
</CustomField>