force-app/main/default/objects/Route_to_Market__c/fields/East_Anglia__c.field-meta.xml
<CustomField>
    <fullName>East_Anglia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>East Anglia</label>
    <type>Checkbox</type>
</CustomField>