force-app/main/default/objects/Route_to_Market__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education</label>
    <type>Checkbox</type>
</CustomField>