force-app/main/default/objects/Route_to_Market__c/fields/Enterprise_100_Employees__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_100_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise (100+ Employees)</label>
    <type>Checkbox</type>
</CustomField>