force-app/main/default/objects/Route_to_Market__c/fields/Healthcare__c.field-meta.xml
<CustomField>
    <fullName>Healthcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthcare</label>
    <type>Checkbox</type>
</CustomField>