force-app/main/default/objects/Route_to_Market__c/fields/Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufacturing</label>
    <type>Checkbox</type>
</CustomField>