force-app/main/default/objects/Route_to_Market__c/fields/Media_Services__c.field-meta.xml
<CustomField>
    <fullName>Media_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Services</label>
    <type>Checkbox</type>
</CustomField>