force-app/main/default/objects/Route_to_Market__c/fields/Midlands__c.field-meta.xml
<CustomField>
    <fullName>Midlands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Midlands</label>
    <type>Checkbox</type>
</CustomField>