force-app/main/default/objects/Route_to_Market__c/fields/North__c.field-meta.xml
<CustomField>
    <fullName>North__c</fullName>
    <defaultValue>false</defaultValue>
    <label>North</label>
    <type>Checkbox</type>
</CustomField>