force-app/main/default/objects/Route_to_Market__c/fields/North_East__c.field-meta.xml
<CustomField>
    <fullName>North_East__c</fullName>
    <defaultValue>false</defaultValue>
    <label>North East</label>
    <type>Checkbox</type>
</CustomField>