force-app/main/default/objects/Route_to_Market__c/fields/Number_Checked__c.field-meta.xml
<CustomField>
    <fullName>Number_Checked__c</fullName>
    <formula>IF( SME_5_20_Employees__c = TRUE, 1, 0) +
IF( SME_20_50_Employees__c = TRUE, 1, 0) +
IF( SME_50_100_Employees__c = TRUE, 1, 0) +
IF( Enterprise_100_Employees__c = TRUE, 1, 0)+

IF( Midlands__c = TRUE, 1, 0) +
IF( North__c = TRUE, 1, 0) +
IF( North_East__c = TRUE, 1, 0) +
IF( Scotland__c = TRUE, 1, 0) +
IF( South_East__c = TRUE, 1, 0) +
IF( South_West__c = TRUE, 1, 0) +
IF( Yorkshire__c = TRUE, 1, 0) +
IF( East_Anglia__c = TRUE, 1, 0) +
IF( Berks_Bucks__c = TRUE, 1, 0) +

IF( Arts_Entertainment_Recreation__c = TRUE, 1, 0) +
IF( Construction__c = TRUE, 1, 0) +
IF( Education__c = TRUE, 1, 0) +
IF( Healthcare__c = TRUE, 1, 0) +
IF( Hospitality__c = TRUE, 1, 0) +
IF( Manufacturing__c = TRUE, 1, 0) +
IF( Media_Services__c = TRUE, 1, 0) +
IF( Professional_Services__c = TRUE, 1, 0) +
IF( Real_Estate__c = TRUE, 1, 0) +
IF( Wholesale_Retail_Trade__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Checked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>