force-app/main/default/objects/Route_to_Market__c/fields/Real_Estate__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real Estate</label>
    <type>Checkbox</type>
</CustomField>