force-app/main/default/objects/Route_to_Market__c/fields/Route_to_Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_to_Market_Type__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;Company_Size&quot;, &quot;Company Size&quot;,
IF(RecordType.DeveloperName = &quot;Location&quot;, &quot;Location&quot;,
IF(RecordType.DeveloperName = &quot;Sectors&quot;, &quot;Sectors&quot;,&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route to Market Type</label>
    <type>Text</type>
</CustomField>