force-app/main/default/objects/Route_to_Market__c/fields/Scotland__c.field-meta.xml
<CustomField>
    <fullName>Scotland__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scotland</label>
    <type>Checkbox</type>
</CustomField>