force-app/main/default/objects/Route_to_Market__c/fields/SME_20_50_Employees__c.field-meta.xml
<CustomField>
    <fullName>SME_20_50_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SME (20-50 Employees)</label>
    <type>Checkbox</type>
</CustomField>