force-app/main/default/objects/Route_to_Market__c/fields/SME_50_100_Employees__c.field-meta.xml
<CustomField>
    <fullName>SME_50_100_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SME (50-100 Employees)</label>
    <type>Checkbox</type>
</CustomField>