force-app/main/default/objects/Route_to_Market__c/fields/SME_5_20_Employees__c.field-meta.xml
<CustomField>
    <fullName>SME_5_20_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SME (5-20 Employees)</label>
    <type>Checkbox</type>
</CustomField>