force-app/main/default/objects/Route_to_Market__c/fields/South_East__c.field-meta.xml
<CustomField>
    <fullName>South_East__c</fullName>
    <defaultValue>false</defaultValue>
    <label>South East</label>
    <type>Checkbox</type>
</CustomField>