force-app/main/default/objects/Route_to_Market__c/fields/South_West__c.field-meta.xml
<CustomField>
    <fullName>South_West__c</fullName>
    <defaultValue>false</defaultValue>
    <label>South West</label>
    <type>Checkbox</type>
</CustomField>