force-app/main/default/objects/Route_to_Market__c/fields/Wholesale_Retail_Trade__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Retail_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wholesale &amp; Retail Trade</label>
    <type>Checkbox</type>
</CustomField>