force-app/main/default/objects/Route_to_Market__c/fields/Yorkshire__c.field-meta.xml
<CustomField>
    <fullName>Yorkshire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yorkshire</label>
    <type>Checkbox</type>
</CustomField>