force-app/main/default/objects/Route_to_Market__c/recordTypes/Company_Size.recordType-meta.xml
<RecordType>
    <fullName>Company_Size</fullName>
    <active>true</active>
    <label>Company Size</label>
</RecordType>