force-app/main/default/objects/Route_to_Market__c/recordTypes/Sectors.recordType-meta.xml
<RecordType>
    <fullName>Sectors</fullName>
    <active>true</active>
    <label>Sectors</label>
</RecordType>